<resources>
    <string name="app_name">Ideas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="et_name">Nombre de usuario</string>
    <string name="et_passwd">Contraseña</string>
    <string name="et_repeat_passwd">Confirmar contraseña</string>
    <string name="title_login">Login</string>
    <string name="btn_acceder">Acceder</string>
    <string name="menu_lista">Lista</string>
    <string name="menu_cuenta">Cuenta</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="select_img">Seleccionar imagen</string>
    <string name="save_idea">Guardar idea</string>
    <string name="dialog_denied_permission_title">Permiso denegado</string>
    <string name="dialog_denied_permission_message">Es necesario que acceder a tus archivos para poder cargar una imagen. Por favor activa los permisos desde ajustes.</string>
    <string name="dialog_denied_permission_button_text">Ir a ajustes</string>
    <string name="dialog_denied_permission_button_negative_text">Cancelar</string>
    <string name="prioridad">Prioridad</string>
    <string name="estado">Estado</string>
    <string name="baja">Baja</string>
    <string name="media">Media</string>
    <string name="alta">Alta</string>
    <string name="proceso">En proceso</string>
    <string name="prendiente">Pendiente</string>
    <string name="terminado">Terminado</string>
    <string name="titulo_hint">Titulo</string>
    <string name="passwd_hint">Contraseña</string>
    <string name="detalle_hint">Añadir detalle</string>
    <string name="btn_act_reg">Actualizar y regresar</string>
    <string name="btn_añadir">Añadir</string>
    <string name="new_idea">Nombre de tu idea</string>
    <string name="new_idea_sobre">¿Sobre que trata?</string>

</resources>