<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    tools:context=".ui.fragment.LoginFragment">

    <Button
        android:id="@+id/btnGoToCreate"
        style="@style/button"
        android:layout_marginTop="16dp"
        android:text="@string/crear_cuenta"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLoginAcceder"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnLoginAcceder"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginAcceder"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        style="@style/titles"
        android:text="@string/title_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etLoginName"
        app:layout_goneMarginTop="64dp"
        style="@style/edit_text"
        android:layout_marginTop="40dp"
        android:hint="@string/et_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/etLoginPassword"
        style="@style/edit_text"
        android:hint="@string/et_passwd"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/etLoginName"
        app:layout_constraintStart_toStartOf="@+id/etLoginName"
        app:layout_constraintTop_toBottomOf="@+id/etLoginName" />

    <Button
        android:id="@+id/btnLoginAcceder"
        style="@style/button"
        android:layout_marginTop="140dp"
        app:cornerRadius="8dp"
        android:text="@string/btn_acceder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/etLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>